# hdlstuff-hal

./: CMakeLists.txt  LICENSE  README.md  hdlstuff_hal-config.cmake.in
include/hdlstuff-hal/: hal.hpp
src/: hal.cpp
